--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -63,4 +63,6 @@ layout: default
 
 {{site.data.alerts.hr_shaded}}
 
+{% include footer.html %}
+
 {% comment %} Copyright 2021 Google LLC {% endcomment %}
